--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<section id="two">
 						<h2 style="color:black">Get In Touch</h2>
 						<p style="color:black" href="#">u1363702 at utah dot edu</p>
-						<a href="mailto:u1363702@utah.edu">Click here to email me</a>
-						<br>
+						<a href="mailto:u1363702@utah.edu">Click here to email me<br></a>
+						<p></p>
 						<center><img src="images/affiliations.png" width="600" height="200">
 					</section>
 					
