--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- One -->
 					<section id="one">
-						<p style="color:black"> <i>Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. We must understand the interplay between stars and their galactic environments. This is the science I love, and focus on!</i></p> 
+						<p style="color:black"> <i>Immediately after the Big Bang, the only elements in the Universe were hydrogen, helium, and a pinch of lithium. Understanding how we went from that simple broth to the complex stew of today's periodic table is at the core of galactic archeology. To accomplish this, we must understand the interplay between stars and their galactic environments. This is the science I love, and focus on!</i></p> 
 						<hr width="100%;" color="black" size="5">
 						<header class="major">
 							<h1 style="color:black"><u>What I Do</u><br />
